--- a/L00177804_Golf/Pages/Shared/_Layout.cshtml
+++ b/L00177804_Golf/Pages/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" asp-page="/Memberships/Create">Register</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" asp-page="/Memberships/DeleteModify">Cancel \ Edit Booking</a>
+                            <a class="dropdown-item" asp-page="/Memberships/DeleteModify">Cancel \ Edit Membership</a>
                         </div>
                     </li>
                
