--- a/L00177804_Golf/Pages/Memberships/Index.cshtml
+++ b/L00177804_Golf/Pages/Memberships/Index.cshtml
@@ -83,7 +83,7 @@
     <script type="text/javascript">
         $(function () {
             $("#AutoFill").autocomplete({
-                source: ["Male Golfers", "Female Golfers", "Scratch Players", "Player Handicap less 10", "Player Handicap Greater than 10 and less than 20", "Player Handicap Greater 20"],
+                source: ["Male Golfers", "Female Golfers", "Scratch Players", "Non-binary Golfers","Other Golfers","Player Handicap less 10", "Player Handicap Greater than 10 and less than 20", "Player Handicap Greater 20"],
                 minLength: 3
             });
         });
