--- a/L00177804_Golf/Pages/Memberships/Create.cshtml
+++ b/L00177804_Golf/Pages/Memberships/Create.cshtml
@@ -46,10 +46,17 @@
 
                                 <!-- Gender input -->
                                 <div class="form-outline mb-4">
-                                    <input asp-for="Membership.Gender" class="form-control" />
-                                    <label class="form-label" for="form3Example3">Gender</label>
+                                    <label class="form-label" for="genderSelect">Gender</label>
+                                    <select asp-for="Membership.Gender" class="form-control" id="genderSelect">
+                                        <option value="">Select gender</option>
+                                        <option value="Male">Male</option>
+                                        <option value="Female">Female</option>
+                                        <option value="Non-binary">Non-binary</option>
+                                        <option value="Other">Other</option>
+                                    </select>
                                     <span asp-validation-for="Membership.Gender" class="text-danger"></span>
                                 </div>
+
 
                                 <!-- HandiCap input -->
                                 <div class="form-outline mb-4">
