--- a/L00177804_Golf/Pages/Index.cshtml
+++ b/L00177804_Golf/Pages/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@page
 @model IndexModel
 
-
 <div class="text-center">
     <h1 class="display-4">King John's Golf Club</h1>
 </div>
@@ -25,7 +24,7 @@
             <img src="/Images/thirdGolf.jpg" class="img-fluid">
             <div class="carousel-caption d-none d-md-block">
                 <h5>The Club house</h5>
-                <p>King Johns Castle Golf Club House is located beside the 18th hole and is open daily serving a selection of light snacks and drinks</p>
+                <p>King Johns Castle Club House is located beside the 18th hole and is open daily serving a selection of light snacks and drinks</p>
             </div>
         </div>
     </div>
@@ -39,11 +38,11 @@
     </button>
 </div>
 
-<div class="about-section">
-    <h1>About Us Page</h1>
-    <p>Welcome to King Johns Golf Club, where the love for golf meets a picturesque environment.</p>
-    <p>King Johns Golf Club is a premier 18-hole golf course located in the heart of the stunning Irish countryside. Our golf course is designed to challenge golfers of all levels, with a combination of tight fairways, well-manicured greens, and tricky bunkers, making it a true test of skill and accuracy.</p>
-  
+<div id="about-us" class="container-fluid">
+    <div class="about-section">
+        <h1>About Us Page</h1>
+        <p>Welcome to King Johns Golf Club, where the love for golf meets a picturesque environment.</p>
+        <p>King Johns Golf Club is a premier 18-hole golf course located in the heart of the stunning Irish countryside. Our golf course is designed to challenge golfers of all levels, with a combination of tight fairways, well-manicured greens, and tricky bunkers, making it a true test of skill and accuracy.</p>
+    </div>
 </div>
-
 
