--- a/L00177804_Golf/Pages/MemberBookings/Edit.cshtml
+++ b/L00177804_Golf/Pages/MemberBookings/Edit.cshtml
@@ -80,6 +80,7 @@
             $(document).ready(function () {
                 $('#datepicker').datepicker({
                     showOptions: { speed: 'fast' },
+                    minDate: 0,
                     changeMonth: false,
                     changeYear: false,
                     dateFormat: 'dd/mm/yy',
