--- a/L00177804_Golf/Pages/MemberBookings/Index.cshtml
+++ b/L00177804_Golf/Pages/MemberBookings/Index.cshtml
@@ -81,7 +81,7 @@
             </div>
         </div>
     </div>
-
+    </div>
 @section scripts{
 
     <!-- SCRIPT TO RETURN LIST OF MEMBERS FROM DATABASE-->
