--- a/L00177804_Golf/Pages/Shared/_Layout.cshtml
+++ b/L00177804_Golf/Pages/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/L00177804_Golf.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/jquery-timepicker/jquery.timepicker.min.css" />
     <!-- BOOTSTRAP 5 NAVBAR -->
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNavbar">
@@ -49,9 +50,17 @@
                         </div>
                     </li>
                 </ul>
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#about-us">About Us</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link active" aria-current="page" asp-page="/Shared/Privacy">Privacy</a>
+                    </li>
             </div>
         </div>
     </nav>
+   
 </head>
 <!-- BODY -->
 <body>
