--- a/L00177804_Golf/Pages/MemberBookings/Delete.cshtml
+++ b/L00177804_Golf/Pages/MemberBookings/Delete.cshtml
@@ -13,25 +13,25 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Booking.FirstName)
+            Firstname
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Booking.FirstName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Booking.LastName)
+            Surname
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Booking.LastName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Booking.BookingTimeOnly)
+            Time
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Booking.BookingTimeOnly)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Booking.BookingDateOnly)
+            Date
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Booking.BookingDateOnly)
