--- a/L00177804_Golf/Pages/Memberships/Delete.cshtml
+++ b/L00177804_Golf/Pages/Memberships/Delete.cshtml
@@ -13,37 +13,37 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Membership.FirstName)
+            Firstname
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Membership.FirstName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Membership.LastName)
+            Surname
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Membership.LastName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Membership.Gender)
+            Gender
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Membership.Gender)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Membership.Handicap)
+            Handicap
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Membership.Handicap)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Membership.Phone)
+            Phone
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Membership.Phone)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Membership.Email)
+            Email
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Membership.Email)
