--- a/L00177804_Golf/Pages/Memberships/Edit.cshtml
+++ b/L00177804_Golf/Pages/Memberships/Edit.cshtml
@@ -24,11 +24,19 @@
                 <input asp-for="Membership.LastName" class="form-control" />
                 <span asp-validation-for="Membership.LastName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Membership.Gender" class="control-label"></label>
-                <input asp-for="Membership.Gender" class="form-control" />
+            <!-- Gender input -->
+            <div class="form-outline mb-4">
+                <label class="form-label" for="genderSelect">Gender</label>
+                <select asp-for="Membership.Gender" class="form-control" id="genderSelect">
+                    <option value="">Select gender</option>
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
+                    <option value="Non-binary">Non-binary</option>
+                    <option value="Other">Other</option>
+                </select>
                 <span asp-validation-for="Membership.Gender" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Membership.Handicap" class="control-label"></label>
                 <input asp-for="Membership.Handicap" class="form-control" />
