--- a/L00177804_Golf/Pages/Memberships/Create.cshtml
+++ b/L00177804_Golf/Pages/Memberships/Create.cshtml
@@ -31,14 +31,14 @@
                                     <div class="col-md-6 mb-4">
                                         <div class="form-outline">
                                             <input asp-for="Membership.FirstName" class="form-control" />
-                                            <label class="form-label" for="form3Example1">First name</label>
+                                            <label class="form-label" for="form3Example1">First Name</label>
                                             <span asp-validation-for="Membership.FirstName" class="text-danger"></span>
                                         </div>
                                     </div>
                                     <div class="col-md-6 mb-4">
                                         <div class="form-outline">
                                             <input asp-for="Membership.LastName" class="form-control" />
-                                            <label class="form-label" for="form3Example2">Last name</label>
+                                            <label class="form-label" for="form3Example2">Surname</label>
                                             <span asp-validation-for="Membership.LastName" class="text-danger"></span>
                                         </div>
                                     </div>
