--- a/L00177804_Golf/Pages/MemberBookings/Details.cshtml
+++ b/L00177804_Golf/Pages/MemberBookings/Details.cshtml
@@ -11,25 +11,25 @@
         <!-- Membership details -->
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Booking.FirstName)
+                First Name
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Booking.FirstName)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Booking.LastName)
+                Surname
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Booking.LastName)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Booking.BookingTimeOnly)
+                Time
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Booking.BookingTimeOnly)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Booking.BookingDateOnly)
+                Date
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Booking.BookingDateOnly)
